[package]
name = "unit"
version = "0.1.0"
authors = ["Rogerio Chaves <rogeriocfj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
simple-error = "0.2.1"
cmd_lib = "0.7.8"

[dev-dependencies]
fs_extra = "1.1.0"
rand = "0.7.3"
lazy_static = "1.4.0"