[package]
name = "unit"
version = "0.1.0"
authors = ["Rogerio Chaves <rogeriocfj@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Universal Test Generator"
readme = "README.md"
homepage = "https://github.com/rogeriochaves/unit"
repository = "https://github.com/you/grrs"
keywords = ["cli", "tests"]
categories = ["command-line-utilities"]

[dependencies]
Inflector = "0.11.4"
simple-error = "0.2.1"
cmd_lib = "0.7.8"
regex = "1.3.9"
colored = "2"

[dev-dependencies]
fs_extra = "1.1.0"
rand = "0.7.3"
lazy_static = "1.4.0"